# haskell-appc-aci

./: .gitignore  .travis.yml  LICENSE  README.md  aci.cabal  stack.yaml
app/: Main.hs
src/ACI/: Image.hs
test/: Spec.hs
