name:                aci
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/wayofthepie/aci#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen O&#39;Brien
maintainer:          wayofthepie@gmail.com
copyright:           Stephen O&#39;Brien
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Lib
    , ACI.Image
  build-depends:
    base >= 4.7 && < 5
    , aeson
    , attoparsec
    , containers
    , bytestring
    , semver
    , text
    , uri-bytestring
    , tar
  default-language:    Haskell2010

executable aci-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aci
  default-language:    Haskell2010

test-suite aci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base
    , attoparsec
    , bytestring
    , semver
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , aci
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/aci
